Fix gallery hover bug on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,17 +50,19 @@ html.ready {
   filter: brightness(100%);
 }
 
-.react-photo-album .progressive-image:hover {
-  transform: scale(1.05);
-  filter: brightness(105%);
-  box-shadow: 0 4px 15px rgba(159, 62, 255, 0.8),
-    0 0 30px rgba(192, 132, 252, 0.5), 0 0 50px rgba(159, 62, 255, 0.3);
-}
+@media (hover: hover) and (pointer: fine) {
+  .react-photo-album .progressive-image:hover {
+    transform: scale(1.05);
+    filter: brightness(105%);
+    box-shadow: 0 4px 15px rgba(159, 62, 255, 0.8),
+      0 0 30px rgba(192, 132, 252, 0.5), 0 0 50px rgba(159, 62, 255, 0.3);
+  }
 
-html.dark .react-photo-album .progressive-image:hover {
-  filter: brightness(90%);
-  box-shadow: 0 8px 20px rgba(192, 132, 252, 0.9),
-    0 0 30px rgba(159, 62, 255, 0.6);
+  html.dark .react-photo-album .progressive-image:hover {
+    filter: brightness(90%);
+    box-shadow: 0 8px 20px rgba(192, 132, 252, 0.9),
+      0 0 30px rgba(159, 62, 255, 0.6);
+  }
 }
 
 @keyframes fadeSlideDown {
